[f] fix image overflow

--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -121,6 +121,7 @@
       height: 80px;
       background: #f2f4f5;
       padding: 4px;
+      overflow: hidden;
       img {
         border-radius: 4px;
         width: 34px;
